@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+yulian5 2025-11-07 23:50:00-00:00 - build 6588
+
+1. Fixed copy counter for skipped folders
+
+--------------------------------------------------------------------------------
 drkns 2025-11-07 20:23:20+00:00 - build 6587
 
 1. gh-1040: Add support for zstd archives.
